# itpr

./: .gitignore  .pylintrc  Makefile  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini
notebooks/: ITPR.ipynb
src/itpr/: core.py  tables.py  utils.py
tests/: conftest.py  test_.py  test_entropy.py  test_itpr.py
