[tool.poetry]
name = "itpr"
version = "0.1.0"
description = "ITPR"
authors = ["Gianmarco Aversano <gianmarco.aversano@euranova.eu>"]
license = "LICENSE"
readme = "README.md"
packages = [{ include = "itpr", from = "src" }]
include = ["*.py", "src/**/*.json", "src/**/*.toml"]
exclude = ["test/*"]

[build-system]
requires = ["poetry-core>=1.0.0", "cython"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 110

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
# Utils
pyrootutils = "*"
loguru = "*"
tqdm = "^4.66.1"
aenum = "^3.1.15"
# Visualization
matplotlib = "^3.8.1"
seaborn = "^0.13.0"
# Data Science
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
numpy = "^1.26.1"

[tool.poetry.dev-dependencies]
tox = { version = "*" }
tox-poetry = { version = "*" }
black = { extras = ["jupyter"], version = "*" }
flake8 = { version = "*" }
ipython = { version = "*" }
isort = { version = "*" }
mypy = { version = "*" }
pylint = { version = "*" }
pytest = { version = "*" }
pytest-cov = { version = "*" }
pytest-mock = { version = "*" }
pytest-pylint = { version = "*" }
pytest-mypy = { version = "*" }
pytest-testmon = { version = "*" }
pytest-xdist = { version = "*" }
virtualenv = { version = "*" }
msgpack = { version = "*" }
nbmake = { version = "*" }
nbstripout = { version = "*" }

[[tool.poetry.source]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
